Added new feature functionality
 Changes to be committed:
	modified:   css/style.css
	modified:   index.html
	modified:   js/ViewModel.js

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,11 @@
 li {background: white}
 li:nth-child(odd) {background:  #D1D1E0}
+
+ul li {
+	cursor: pointer;
+}
+
+.selected, ul li:hover {
+	color: #000;
+	background-color: #FFFF00;
+}
