--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,57 @@ ul li {
 	color: #000;
 	background-color: #FFFF00;
 }
+/* Normal styles for the dialog */
+/*#dialog {*/
+/*	background:#fff;*/	
+/*	background-color: cyan;
+	opacity: 0.6;
+*//*	left:50%;
+	margin:-250px 0 0 -40%;*/
+/*	position:absolute;
+*//*	top:-50%;*/	
+/*	z-index: 10;
+	visibility: hidden;
+	margin-left: 10%;
+	margin-top: 10%;
+	height:50%;
+	width:50%;
+	border-radius:5px;
+	box-shadow:0 3px 7px rgba(0,0,0,.25);
+	-moz-box-shadow:0 3px 7px rgba(0,0,0,.25);
+	-webkit-box-shadow:0 3px 7px rgba(0,0,0,.25);
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+}
+*/	/* Make the dialog appear when targeted */
+/*	#dialog:target {
+		top:50%;
+		transition: all 0.4s ease-in-out;
+		-moz-transition: all 0.4s ease-in-out;
+		-webkit-transition: all 0.4s ease-in-out;
+	}
+#dialog header,#dialog footer {
+	background:#f7f7f7;
+	border-bottom: 1px solid #e7e7e7;
+	border-radius: 5px 5px 0 0;
+	-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;
+}
+#dialog footer {
+	border:none;
+	border-top: 1px solid #e7e7e7;
+	border-radius: 0 0 5px 5px;
+	-moz-border-radius: 0 0 5px 5px;
+	-webkit-border-radius: 0 0 5px 5px;
+}
+#dialog section,#dialog header, #dialog footer {
+	padding:15px;
+	z-index:200;
+}
+#dialog h2 {
+	margin:0;
+}
+#dialog .btn {
+	float:right;
+}*/
