--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,13 @@ ul {
 	margin: 0px;
 }
 
-li {background: white}
+li {
+	background: white;
+}
 
-li:nth-child(odd) {background:  #d1d1e0}
+li:nth-child(odd) {
+	background:  #d1d1e0;
+}
 
 ul li {
 	cursor: pointer;
@@ -51,10 +55,10 @@ ul li {
 
 .dialog-wrapper {
 	color: blue;
-	position: absolute;
+	position: relative;
 	width: 80%;
 	height: 80%;
-	z-index: 10;
+	z-index: 1041;
 	margin-left: 10%;
 	margin-top: 10%;
 }
